--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,50 @@
+body{
+    background-color: lightgoldenrodyellow !important;
+    font-family: 'VarelaRound-Regular';
+}
+
 div.container div.titulo h1 {
     text-align: center;
     font-size: 3em;
+    color: darkgoldenrod;
+}
+
+div.con-parraf {
+    border: 5px solid goldenrod;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+div.container div.personajes {
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.container div.personajes img {
+    width: 200px;
+}
+
+div.container div.col-rojo {
+    border: 5px solid crimson;
+    border-radius: 5px;
+    *margin: 1px 5px;
+}
+
+div.container div.col-rosa {
+    border: 5px solid palevioletred;
+    border-radius: 5px;
+    *margin: 1px 5px;
+}
+
+div.container div.col-azul {
+    border: 5px solid darkblue;
+    border-radius: 5px;
+    *margin: 1px 5px;
+}
+
+div.container div.col-naranja {
+    border: 5px solid darkorange;
+    border-radius: 5px;
+    *margin: 1px 5px;
 }
