--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body{
     font-family: 'VarelaRound-Regular';
 }
 
+.titulo-mor {
+    width: 160px;
+}
+
 div.container div.titulo h1 {
     text-align: center;
     font-size: 3em;
@@ -57,4 +61,11 @@ a img.img-juegos  {
 
 p.miputavida {
     font-size: 1.5em;
+}
+
+a.nav-link {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-left: 10px;
+    margin-right: 10px;
 }
